[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoval_slam"
version = "0.1.0"
description = "A web-based simulator for autonomous driving, featuring sensor simulation, perception algorithms via Pyodide, and GitHub Pages deployment."
authors = [{name = "Gemini", email = "gemini@google.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
